wip : addToBag api
